@@ -1330,6 +1330,16 @@ name|org
 operator|.
 name|junit
 operator|.
+name|Before
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
 name|Test
 import|;
 end_import
@@ -1373,6 +1383,31 @@ argument_list|(
 literal|null
 argument_list|)
 decl_stmt|;
+annotation|@
+name|Before
+DECL|method|setup ()
+specifier|public
+name|void
+name|setup
+parameter_list|()
+block|{
+name|MyContainerAllocator
+operator|.
+name|getJobUpdatedNodeEvents
+argument_list|()
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|MyContainerAllocator
+operator|.
+name|getTaskAttemptKillEvents
+argument_list|()
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+block|}
 annotation|@
 name|After
 DECL|method|tearDown ()
@@ -5290,6 +5325,52 @@ expr_stmt|;
 name|dispatcher
 operator|.
 name|await
+argument_list|()
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|allocator
+operator|.
+name|getJobUpdatedNodeEvents
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|allocator
+operator|.
+name|getJobUpdatedNodeEvents
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getUpdatedNodes
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|allocator
+operator|.
+name|getJobUpdatedNodeEvents
+argument_list|()
+operator|.
+name|clear
 argument_list|()
 expr_stmt|;
 comment|// get the assignment
@@ -9867,6 +9948,7 @@ name|result
 return|;
 block|}
 DECL|method|getTaskAttemptKillEvents ()
+specifier|static
 name|List
 argument_list|<
 name|TaskAttemptKillEvent
@@ -9879,6 +9961,7 @@ name|taskAttemptKillEvents
 return|;
 block|}
 DECL|method|getJobUpdatedNodeEvents ()
+specifier|static
 name|List
 argument_list|<
 name|JobUpdatedNodesEvent
